Added Get User By ID Endpoint
