# internal/adapters/chi-server/router.go
@@ -31,6 +31,7 @@ func (s *HttpServer) SetRouter() *chi.Mux {
 		r.Use(middlewares.SetJSONResponseMiddleware())
 
 		// Users resources
+		r.Get("/users/{id}", usersHandler.GetUser(s.api))
 		r.Post("/users/search", usersHandler.SearchUsers(s.api))
 		r.Post("/users", usersHandler.CreateUser(s.api))
 	})
